--- a/src/properties.yml
+++ b/src/properties.yml
@@ -1,6 +1,7 @@
 name: Vitals
 version: 1.0.0
 description: Adds vital commands and features to run a Vanilla server.
-author: Denkfaehigkeit, Kohle
+author: Denkfaehigkeit
+authors: [Denkfaehigkeit, Kohle]
 website: http://github.com/VolumetricPixels/Vitals
 main: com.volumetricpixels.vitals.main.Vitals
