Fixed weather to accomodate future weather additions. :sunny: :snowflake: :umbrella: :foggy: :cloud: :cyclone: Signed-off-by: Jessica Xia <thejohntitor2036@gmail.com>

--- a/src/properties.yml
+++ b/src/properties.yml
@@ -5,3 +5,5 @@ author: Kohle
 authors: [Kohle, Denkfaehigkeit]
 website: http://github.com/VolumetricPixels/Vitals
 main: com.volumetricpixels.vitals.main.Vitals
+
+depends: [Vanilla]
