--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,6 @@
             <id>spout-repo</id>
             <url>http://repo.spout.org/</url>
         </repository>
-        <repository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -70,11 +65,6 @@
             <artifactId>spoutapi</artifactId>
             <version>dev-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.pircbotx</groupId>
-            <artifactId>pircbotx</artifactId>
-            <version>1.8-SNAPSHOT</version>
-        </dependency>
     </dependencies>
     
     <!-- Build Settings -->
@@ -87,7 +77,7 @@
                 <filtering>false</filtering>
                 <directory>${basedir}</directory>
                 <includes>
-                    <include>*.txt</include>
+                    <include>LICENSE.txt</include>
                 </includes>
             </resource>
             <resource>
@@ -110,7 +100,7 @@
         <!-- Plugins -->
         <plugins>
             <!-- License header formatting plugin -->
-            <!-- <plugin>
+            <plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
                 <version>1.10.b1</version>
@@ -146,7 +136,7 @@
                         <include>src/test/java/**</include>
                     </includes>
                 </configuration>
-            </plugin> -->
+            </plugin>
             <!-- Version strip plugin -->
             <plugin>
                 <groupId>com.sourcesense.maven</groupId>
